--- a/.babelrc
+++ b/.babelrc
@@ -21,7 +21,8 @@
     [
       "import",
       {
-        "libraryName": "antd-mobile",
+        "libraryName": "antd",
+        "libraryDirectory": "es",
         "style": true
       }
     ],
