--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/free-brands-svg-icons": "^5.10.2",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "aelf-sdk": "^3.2.11",
-    "antd-mobile": "^2.2.14",
+    "antd": "^3.23.2",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "i18next": "^17.0.9",
+    "i18next-browser-languagedetector": "^3.0.3",
     "lodash": "^4.17.15",
     "lodash-decorators": "^6.0.1",
     "memoize-one": "^5.0.5",
@@ -37,6 +42,7 @@
     "query-string": "5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.5",
     "react-if": "^3.4.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
