--- a/package.json
+++ b/package.json
@@ -13,22 +13,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/973526962/random-number.git"
+    "url": "git+https://github.com/AElfProject/random-number.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/973526962/random-number/issues"
+    "url": "https://github.com/AElfProject/random-number/issues"
   },
-  "homepage": "https://github.com/973526962/random-number#readme",
+  "homepage": "https://github.com/AElfProject/random-number#readme",
   "devEngines": {
     "node": "10.x || 11.x || 12.x"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-brands-svg-icons": "^5.10.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "aelf-sdk": "^3.2.11",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
@@ -38,14 +35,16 @@
     "lodash": "^4.17.15",
     "lodash-decorators": "^6.0.1",
     "memoize-one": "^5.0.5",
+    "moment-locales-webpack-plugin": "^1.1.0",
     "prop-types": "^15.7.2",
-    "query-string": "5",
+    "query-string": "^5.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.11.5",
     "react-if": "^3.4.3",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-use": "^12.10.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
@@ -94,10 +93,11 @@
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "terser-webpack-plugin": "^2.2.1",
     "unused-files-webpack-plugin": "^3.4.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.39.1",
+    "webpack-ant-icon-loader": "^1.0.8",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2",
